--- a/templates/base/storefront/base.html
+++ b/templates/base/storefront/base.html
@@ -21,6 +21,7 @@
       {% block content %}{% endblock %}
       {% include 'base/storefront/footer.html' %}
       <script src="{% static 'storefront/js/home.js' %}"></script>
+      <script src="{% static 'backoffice/extensions/sweetalert2/sweetalert2.all.min.js' %}"></script>
       {% block extra_js %}{% endblock %}
 </body>
 
